# aict

./: .gitignore  .gitmodules  README.md  timer.py
ai32/: README.md  ai32.uvoptx  ai32.uvprojx
ai32/CMSIS/Include/: cmsis_compiler.h  cmsis_version.h  core_cm4.h
ai32/Device/Include/: stm32f407xx.h  stm32f4xx.h  system_stm32f4xx.h
ai32/Device/Source/: startup_stm32f407xx.s  system_stm32f4xx.c
ai32/User/: main.c
c/cal_trae/: CMakeLists.txt  CMakeSettings.json  CppProperties.json  calculator.c  calculator.sln  calculator.vcxproj
c/cal_trae/.trae/documents/: C语言计算器实现计划.md  plan_20260115_031602.md
c/calculator/: README.md  main.c
c/test/: c_experiment_analysis.md  c_test.c  c_test_analysis.md  clock.c  create_file_win.c  c控制台程序示例.md  get_sysinf.c  pdf_copy_linux.c  pdf_copy_mac.c  pdf_copy_windows.c
py/: .gitignore
py/copy_pdf/: README.md  copy_pdf.py
py/prj_test/: config.json  honor_x80i_tracker.py  last_status.json  timer.py  timer_code_explanation.md
script/: CheckUptime.ps1  ollama install.ps1  remove_password_complexity.sh
web/: appletv.html  ollama_chat.html
